@@ -10,7 +10,7 @@ installKeeFox.tip = KeeFox needs to install some extra things before it can work
 noUsername.partial-tip = no username
 
 loginsButtonGroup.tip = Click to explore the logins inside this folder.
-loginsButtonLogin.tip = Click to login to this site. Right click for more options.
+loginsButtonLogin.tip = Click to login with this username: %S. Right click for more options.
 loginsButtonEmpty.label = Empty
 loginsButtonEmpty.tip = This folder has no logins inside it
 
